--- a/src/main/java/vista/interfaces/ImportarCosto.fxml
+++ b/src/main/java/vista/interfaces/ImportarCosto.fxml
@@ -60,7 +60,7 @@
                   <ComboBox fx:id="cmbEstado" prefWidth="150.0" GridPane.columnIndex="1" />
                </children>
             </GridPane>
-            <Button fx:id="btnModificarEstado" maxWidth="200.0" minWidth="50.0" mnemonicParsing="false" onAction="#modificarEstado" text="Modificar estado" GridPane.columnSpan="2" GridPane.halignment="CENTER" GridPane.rowIndex="5" />
+            <Button fx:id="btnModificarEstado" disable="true" maxWidth="200.0" minWidth="50.0" mnemonicParsing="false" onAction="#modificarEstado" text="Modificar estado" GridPane.columnSpan="2" GridPane.halignment="CENTER" GridPane.rowIndex="5" />
             <Label style="-fx-font-weight: Bold;" text="Cargos faltantes en el sistema" GridPane.columnIndex="2" GridPane.columnSpan="2" GridPane.halignment="CENTER" GridPane.rowIndex="2">
                <font>
                   <Font name="System Bold" size="12.0" />
@@ -77,7 +77,7 @@
                   <TableColumn fx:id="colFaltantesSistemaCodigo" maxWidth="500.0" minWidth="75.0" prefWidth="-1.0" text="Código de cargo" />
                </columns>
             </TableView>
-            <Button fx:id="btnAltaCargo" maxWidth="200.0" minWidth="50.0" mnemonicParsing="false" onAction="#altaCargo" text="Dar de alta cargo" GridPane.columnIndex="2" GridPane.columnSpan="2" GridPane.halignment="CENTER" GridPane.rowIndex="4" />
+            <Button fx:id="btnAltaCargo" disable="true" maxWidth="200.0" minWidth="50.0" mnemonicParsing="false" onAction="#altaCargo" text="Dar de alta cargo" GridPane.columnIndex="2" GridPane.columnSpan="2" GridPane.halignment="CENTER" GridPane.rowIndex="4" />
          </children>
          <padding>
             <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
