--- a/src/main/java/vista/interfaces/Docentes.fxml
+++ b/src/main/java/vista/interfaces/Docentes.fxml
@@ -68,36 +68,36 @@
                   <Insets left="10.0" right="10.0" />
                </GridPane.margin>
             </GridPane>
-            <GridPane alignment="BOTTOM_LEFT" vgap="5.0" GridPane.rowIndex="1">
+            <GridPane alignment="BOTTOM_LEFT" hgap="10.0" vgap="5.0" GridPane.rowIndex="1">
                <children>
                   <Button fx:id="btnBuscar" contentDisplay="CENTER" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#buscarDocente" text="Buscar docente">
                      <GridPane.margin>
-                        <Insets left="10.0" right="10.0" />
+                        <Insets />
                      </GridPane.margin>
                   </Button>
                   <Button fx:id="btnNuevo" contentDisplay="CENTER" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#nuevoDocente" text="Nuevo docente" GridPane.columnIndex="1">
                      <GridPane.margin>
-                        <Insets left="10.0" right="10.0" />
+                        <Insets />
                      </GridPane.margin>
                   </Button>
                   <Button fx:id="btnEliminar" contentDisplay="CENTER" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#eliminarDocente" text="Eliminar docente" GridPane.columnIndex="2">
                      <GridPane.margin>
-                        <Insets left="10.0" right="10.0" />
+                        <Insets />
                      </GridPane.margin>
                   </Button>
                   <Button fx:id="btnCosto" contentDisplay="CENTER" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#importarUltimoCosto" text="Importar último costo" GridPane.columnIndex="2" GridPane.rowIndex="1">
                      <GridPane.margin>
-                        <Insets left="10.0" right="10.0" />
+                        <Insets />
                      </GridPane.margin>
                   </Button>
                   <Button fx:id="btnGuardar" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#guardarDocente" text="Guardar cambios" GridPane.rowIndex="1">
                      <GridPane.margin>
-                        <Insets left="10.0" right="10.0" />
+                        <Insets />
                      </GridPane.margin>
                   </Button>
                   <Button fx:id="btnDescartar" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#descartarDocente" text="Descartar todo" GridPane.columnIndex="1" GridPane.rowIndex="1">
                      <GridPane.margin>
-                        <Insets left="10.0" right="10.0" />
+                        <Insets />
                      </GridPane.margin>
                   </Button>
                </children>
@@ -113,6 +113,9 @@
                <VBox.margin>
                   <Insets bottom="10.0" />
                </VBox.margin>
+               <padding>
+                  <Insets left="10.0" right="10.0" />
+               </padding>
             </GridPane>
             <TabPane fx:id="tabpDocentes" prefHeight="448.0" prefWidth="798.0" tabClosingPolicy="UNAVAILABLE" GridPane.rowIndex="2">
                <tabs>
@@ -167,7 +170,7 @@
                                           <Insets />
                                        </GridPane.margin>
                                     </Label>
-                                    <DatePicker fx:id="dtpDatosFechaNacimiento" maxWidth="105.0" GridPane.columnIndex="1" GridPane.hgrow="NEVER" GridPane.rowIndex="4">
+                                    <DatePicker fx:id="dtpDatosFechaNacimiento" GridPane.columnIndex="1" GridPane.hgrow="NEVER" GridPane.rowIndex="4">
                                        <GridPane.margin>
                                           <Insets />
                                        </GridPane.margin>
@@ -558,13 +561,13 @@
                                                 <Insets left="20.0" right="10.0" />
                                              </GridPane.margin>
                                           </Label>
-                                          <DatePicker fx:id="dtpCargosDispDesde" maxWidth="-Infinity" prefWidth="105.0" GridPane.columnIndex="3" GridPane.rowIndex="4" />
+                                          <DatePicker fx:id="dtpCargosDispDesde" GridPane.columnIndex="3" GridPane.rowIndex="4" />
                                           <Label text="Hasta" GridPane.columnIndex="4" GridPane.halignment="RIGHT" GridPane.rowIndex="4">
                                              <GridPane.margin>
                                                 <Insets left="20.0" right="10.0" />
                                              </GridPane.margin>
                                           </Label>
-                                          <DatePicker fx:id="dtpCargosDispHasta" prefWidth="105.0" GridPane.columnIndex="5" GridPane.rowIndex="4" />
+                                          <DatePicker fx:id="dtpCargosDispHasta" GridPane.columnIndex="5" GridPane.rowIndex="4" />
                                           <Label text="Resolución" GridPane.rowIndex="5">
                                              <GridPane.margin>
                                                 <Insets right="10.0" />
@@ -576,13 +579,13 @@
                                                 <Insets left="20.0" right="10.0" />
                                              </GridPane.margin>
                                           </Label>
-                                          <DatePicker fx:id="dtpCargosResDesde" prefWidth="105.0" GridPane.columnIndex="3" GridPane.rowIndex="5" />
+                                          <DatePicker fx:id="dtpCargosResDesde" GridPane.columnIndex="3" GridPane.rowIndex="5" />
                                           <Label text="Hasta" GridPane.columnIndex="4" GridPane.halignment="RIGHT" GridPane.rowIndex="5">
                                              <GridPane.margin>
                                                 <Insets left="20.0" right="10.0" />
                                              </GridPane.margin>
                                           </Label>
-                                          <DatePicker fx:id="dtpCargosResHasta" prefWidth="105.0" GridPane.columnIndex="5" GridPane.rowIndex="5" />
+                                          <DatePicker fx:id="dtpCargosResHasta" GridPane.columnIndex="5" GridPane.rowIndex="5" />
                                           <Label text="Último costo" GridPane.rowIndex="6">
                                              <GridPane.margin>
                                                 <Insets right="10.0" />
@@ -594,7 +597,7 @@
                                                 <Insets left="20.0" right="10.0" />
                                              </GridPane.margin>
                                           </Label>
-                                          <DatePicker fx:id="dtpCargosCosto" prefWidth="105.0" GridPane.columnIndex="3" GridPane.rowIndex="6" />
+                                          <DatePicker fx:id="dtpCargosCosto" GridPane.columnIndex="3" GridPane.rowIndex="6" />
                                        </children>
                                        <columnConstraints>
                                           <ColumnConstraints hgrow="NEVER" />
