--- a/src/main/java/vista/interfaces/Proyectos.fxml
+++ b/src/main/java/vista/interfaces/Proyectos.fxml
@@ -14,7 +14,7 @@
 
 <ScrollPane fx:id="mainPane" fitToHeight="true" fitToWidth="true" prefHeight="600.0" prefWidth="800.0" stylesheets="@Style.css" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="vista.controladores.Proyectos">
   <content>
-      <GridPane vgap="5.0">
+      <GridPane vgap="10.0">
         <columnConstraints>
           <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
         </columnConstraints>
@@ -49,7 +49,7 @@
                   <Insets left="10.0" right="10.0" />
                </GridPane.margin>
             </GridPane>
-            <GridPane alignment="BOTTOM_LEFT" hgap="10.0" GridPane.rowIndex="1">
+            <GridPane alignment="BOTTOM_LEFT" hgap="10.0" vgap="5.0" GridPane.rowIndex="1">
                <children>
                   <Button fx:id="btnProyectosBuscar" contentDisplay="CENTER" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#buscarProyecto" text="Buscar proyecto">
                      <GridPane.margin>
@@ -81,6 +81,9 @@
                <GridPane.margin>
                   <Insets />
                </GridPane.margin>
+               <padding>
+                  <Insets left="10.0" right="10.0" />
+               </padding>
             </GridPane>
             <TabPane fx:id="tabpaneProyectos" prefHeight="448.0" prefWidth="798.0" tabClosingPolicy="UNAVAILABLE" GridPane.rowIndex="2">
                <tabs>
@@ -612,6 +615,9 @@
                </tabs>
             </TabPane>
          </children>
+         <padding>
+            <Insets top="10.0" />
+         </padding>
       </GridPane>
   </content>
 </ScrollPane>
