--- a/src/main/java/vista/interfaces/BusquedaCargosDocentes.fxml
+++ b/src/main/java/vista/interfaces/BusquedaCargosDocentes.fxml
@@ -18,7 +18,7 @@
       <RowConstraints minHeight="-Infinity" prefHeight="30.0" vgrow="NEVER" />
    </rowConstraints>
    <children>
-      <TextField fx:id="txtCargoDocenteCriterio" onKeyPressed="#keyPressed" promptText="Ingrese el legajo, apellido o nombre del docente" GridPane.columnSpan="2147483647">
+      <TextField fx:id="txtCargoDocenteCriterio" onKeyPressed="#keyPressed" onKeyTyped="#editarTexto" promptText="Ingrese el legajo, apellido o nombre del docente" GridPane.columnSpan="2147483647">
          <VBox.margin>
             <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
          </VBox.margin>
@@ -26,13 +26,13 @@
             <Insets />
          </GridPane.margin>
       </TextField>
-      <TableView fx:id="tblCargoDocente" prefHeight="200.0" prefWidth="200.0" GridPane.columnSpan="2147483647" GridPane.rowIndex="1">
+      <TableView fx:id="tblCargoDocente" onKeyPressed="#keyPressed" prefHeight="200.0" prefWidth="200.0" GridPane.columnSpan="2147483647" GridPane.rowIndex="1">
         <columns>
           <TableColumn fx:id="colCargoDocenteLegajo" maxWidth="2000.0" prefWidth="75.0" text="Legajo" />
           <TableColumn fx:id="colCargoDocenteNombre" prefWidth="75.0" text="Apellido y nombre" />
             <TableColumn fx:id="colCargoDocenteArea" maxWidth="2000.0" prefWidth="75.0" text="Área" />
             <TableColumn fx:id="colCargoDocenteCodigo" maxWidth="2000.0" prefWidth="75.0" text="Código Cargo" />
-            <TableColumn fx:id="colCargoDocenteCargo1" prefWidth="75.0" text="Cargo" />
+            <TableColumn fx:id="colCargoDocenteCargo" prefWidth="75.0" text="Cargo" />
         </columns>
          <VBox.margin>
             <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
