--- a/src/main/java/vista/interfaces/Style.css
+++ b/src/main/java/vista/interfaces/Style.css
@@ -46,3 +46,9 @@ DatePicker {
 	-fx-border-width: 2;
 	-fx-border-radius: 5;
 }
+
+.login-label, .login-title {
+	-fx-font-weight: bold;
+	-fx-effect: dropshadow( gaussian , rgba(255,255,255,1) , 1,1,1,1 );
+}
+
